2000-01-29  Gary Houston  <ghouston@arglist.com>

	* filesys.c (scm_select, retrieve_select_type, get_element,
	fill_select_type, set_element): modified so that Scheme
	"select" tests port buffers for the ability to provide input
	or accept output.  Previously only the underlying file descriptors
	were checked.  Rewrote the docstring.
 
Thu Jan 27 10:14:25 2000  Greg J. Badros  <gjb@cs.washington.edu>

	* vectors.c, symbols.c, strorder.c: Documentation cut and pasted
 	from Gregg Reynolds.  Thanks Gregg!

Thu Jan 27 09:59:38 2000  Greg J. Badros  <gjb@cs.washington.edu>

	* strop.c (scm_i_index): Obfuscated commented-out SCM_DEFINE by
	adding "x" prefix to the line so that guile-func-name-check
	doesn't complain unnecessarily.

Wed Jan 26 17:33:52 2000  Greg J. Badros  <gjb@cs.washington.edu>

	* throw.c: Factor out an #ifdef/#else/#endif choice more finely
	for maintainability.

	* strop.c: Documentation added by Gregg A. Reynolds.   Pasted in
	from qdocs, RnRs.

Wed Jan 26 10:02:11 2000  Greg J. Badros  <gjb@cs.washington.edu>

	* tag.c:  Added doc for `tag', but mark as deprecated since Mikael 
	suggests removing tag.c altogether (and using a new `class-of'
	instead).

	* strings.c:  Added documentation from Gregg A. Reynolds.  Edited
	a bit by me to use FOO instead of @var{foo} and to have the
	summary come before preconditions on input.  Also dropped trailing 
	(rnrs) note.

	* gsubr.c: Do not use SCM_DEFINE for `gsubr-apply'. Register the
 	function with scm_make_subr_opt w/ last arg of 0 so it is not
 	visible at the Scheme level. Mikael says that this is the right
 	thing because the first arg to the proc is the guts of a compiled
 	closure and shouldn't be exposed to the Scheme level.

Tue Jan 25 17:15:47 2000  Greg J. Badros  <gjb@cs.washington.edu>

	* sort.c: typo in comment fixed.

	* keywords.c: Added documentation.

	* guardians.c: Added documentation (could be better).

	* gc.c: Added docs for gc-set-debug-check-freelist.
